tests/ivg/invalid/invalid_hex_color.ivg
format IVG-3
// invalid hex color
fill #GGGGGG
